# sabiyarn_MoE

./: .gitignore  HOW_TO_RUN.md  README.md  pyproject.toml  requirements.txt  test_generation.py
.github/workflows/: test.yml
cut_cross_entropy/: __init__.py  cce.py  cce_backward.py  cce_lse_forward.py  indexed_dot.py  linear_cross_entropy.py  tl_autotune.py  torch_compile.py  utils.py
cut_cross_entropy/transformers/: gemma2.py  llama.py  mistral.py  patch.py  phi3.py
data/: clean_translate_segments.py  clean_translate_segments_modal.py  data_distribution.py  prepare.py  prepare_data_for_tokenizer_training.py  prepare_modal.py  tokenization (1).ipynb
eval/: eval.py  modal_eval.py
inference/: modal_hosting.py
sabiyarn/: __init__.py  generation.py
sabiyarn/model/: config.json  configuration.py  modeling.py
scripts/: verify_real_tokenizer_masking.py
tests/: test_attention_mask_model_wiring.py  test_clean_translate_segments.py  test_document_causal_mask.py  test_label_masking.py  test_moe_aux_loss.py  test_push_checkpoint_to_s3.py  test_s3_utils.py  test_sampling.py  test_train_config_loading.py
training/: constant_tokens.py  label_masking.py  load_config.py  modal_train.py  new_train.py  push_checkpoint_to_s3_modal.py  s3_utils.py  tokenizer_training.ipynb  train.ipynb  train_config.yaml  training_attention_mask.py  utils.py
