[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sabiyarn"
version = "0.1.0"
description = "Sabiyarn - Large Language Models for African languages "
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.34.0",
    "bitsandbytes==0.45.1",
    "boto3>=1.34.0",
    "datasets==3.2.0",
    "deepspeed>=0.15.0", # Linux/CUDA only -- does not build on native Windows
    "fairscale==0.4.13",
    "fire==0.7.0",
    "huggingface_hub==0.27.1",
    "lmdb==1.7.3",
    "python-dotenv",
    "modal==1.5.1",
    "numpy==2.2.2",
    "omegaconf==2.3.0",
    "pydantic==2.10.6",
    "pynvml==12.0.0",
    "PyYAML==6.0.2",
    "sentencepiece==0.2.0",
    "setuptools==75.8.0",
    "structlog==25.1.0",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "triton==3.2.0",
    "wandb==0.19.5",
    "transformers==4.46.3",
    "safetensors==0.4.5",
    "psutil>=7.0.0",
    "gputil>=1.4.0",
    "pip>=25.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sabiyarn*"] 
